--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,6 @@ jobs:
           context: .
           push: true
           tags: starminworks/watchmybirds:latest
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           build-args: |
             BUILD_TIMESTAMP=${BUILD_TIMESTAMP}
