--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+onnxruntime~=1.20.1
 psutil~=7.0.0
 requests~=2.32.3
 torch~=2.6.0
 opencv-python~=4.11.0.86
 pillow~=11.1.0
-~=8.3.78
 python-dotenv~=1.0.1
 numpy<=2.1.1
 Flask~=3.1.0
