--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ opencv-python~=4.11.0.86
 pillow~=11.1.0
 python-dotenv~=1.0.1
 numpy<=2.1.1
-Flask~=3.1.0
+Flask~=3.0.3
 pytz~=2025.1
 astral~=3.2
 matplotlib~=3.10.0
 six~=1.17.0
 imutils~=0.5.4
 waitress~=3.0.2
+dash~=2.18.2
+dash-bootstrap-components~=1.7.1
 pandas~=2.2.3
