--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -11,9 +11,10 @@
          - DEBUG_MODE=False  # Set to "True" for additional logging output for debugging.
          - DETECTOR_MODEL_CHOICE="yolo"  # The object detection model to use (e.g., yolo, pytorch_ssd).
          - DETECTOR_MODEL_PATH="models/best.onnx"  # The object detection model path.
-         - CONFIDENCE_THRESHOLD=0.8  # Minimum confidence score for an object to be considered detected.
+         - CONFIDENCE_THRESHOLD_DETECTION=0.8  # Minimum confidence score for an object to be considered detected.
          - SAVE_THRESHOLD=0.8  # Minimum confidence score for saving an image of a detected object.
          - MAX_FPS_DETECTION=1  # Limit detection FPS to reduce CPU/GPU usage (higher values increase load).
+         - CLASSIFIER_MODEL=efficientnet_b2
          - CLASSIFIER_MODEL_PATH="models/classifier_best.onnx"  # The classifier model.
          - CLASSIFIER_CLASSES_PATH="models/classifier_classes.txt"  # The classifier model classes file.
          - STREAM_FPS=3  # Maximum FPS for the video stream output.
