feat(rpi): complete appliance overhaul, security hardening & UI standard (v0.1.0-ready)
- Implemented comprehensive RPi image build pipeline (Golden/Release/Dev)
- Security hardening: Read-only root, systemd sandboxing (NNP=true), Polkit power management
- Added reliable first-boot logic with AP fallback and WiFi watchdog
- Standardized UI components (filter bars, modals)
- Added continuous inbox upload and streaming backup system
- Updated CI/CD workflows for public repository compatibility

--- a/.dockerignore
+++ b/.dockerignore
@@ -20,5 +20,33 @@ analytics/dist/
 # Git metadata
 .git
 
+# Secrets
+.env
+.env.*
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Large data files
+*.csv
+nas_file_index.csv
+raw_input_index.csv
+
+# IDE & Tools
+.idea/
+.vscode/
+*.swp
+*.swo
+
 # Docker files (not needed inside image)
 docker-compose*.yml
+
+# Unrelated project folders
+rpi/
+debuglogs/
+docs/
+private_docs/
+.github/
+.venv/
+systemd/
