--- a/.gitignore
+++ b/.gitignore
@@ -165,7 +165,6 @@ cython_debug/
 .idea/modules.xml
 .idea/vcs.xml
 .idea/WatchMyBirds.iml
-ignore/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -245,9 +244,24 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# Runtime data (ignore contents)
+ignore/
+output/**
+models/**
+ingest/**
 
-output/*
-.env
-/models
-/ingest
+# Node
 /analytics/node_modules
+
+# Env
+.env
+
+# Privacy / Local configs
+.claude/
+.benchmarks/
+**/*.env
+/debuglogs
+
+# Codex agent metadata
+.agent/
+private_docs/
