feat(ui): issue-9 backport + ci update + localization cleanup
- Stream 'Today's Summary' tiles link to /species/overview?species_key=...
- Species Summary tiles link to /species/overview?species_key=...&min_score=...
- New /species/overview route with pagination and modal support
- Removes unused modals from stream.html and species.html
Closes #9"

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,11 +2,9 @@ name: Build Release Image
 
 on:
   workflow_dispatch:
-  # Auto-build disabled during dev phase - use rsync to update RPi
-  # Re-enable for production releases:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
   workflow_run:
     workflows: ["Build Golden Image"]
