--- a/rpi/systemd/wmb-setup-server.service
+++ b/rpi/systemd/wmb-setup-server.service
@@ -10,7 +10,7 @@ StateDirectory=watchmybirds
 Environment=PYTHONUNBUFFERED=1
 Environment=SETUP_PORT=80
 Environment=SETUP_TEMPLATE_DIR=/usr/local/share/watchmybirds/setup/templates
-Environment=OUTPUT_DIR=/var/lib/watchmybirds/output
+Environment=OUTPUT_DIR=/opt/app/data/output
 Environment=PYTHONDONTWRITEBYTECODE=1
 ExecStart=/opt/app/.venv/bin/python /usr/local/bin/wmb-setup-server.py
 Restart=on-failure
@@ -18,7 +18,7 @@ RestartSec=2
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
-ReadWritePaths=/var/lib/watchmybirds
+ReadWritePaths=/opt/app/data /var/lib/watchmybirds
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 
